--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -166,7 +166,7 @@
     font: { family: DejaVu Sans Mono, size: 6, weight: normal }
     lefttext: ' '
     bottomtext: "S1 2 3 4 5 6 7 8 9  +10 +20 +30 +40 +50 +60"
-    responsevalue: '0 if len(value) < 4 else value.rstrip(";")[2:]'
+    evalresponse: '0 if len(value) < 4 else value.rstrip(";")[2:]'
   #}
 #end
 
@@ -175,13 +175,13 @@
   label: Power out
   contains: #{
   - item: bargraph
-    maximumvalue: "0 if len(self.k4param('PC')) < 4 else 11.7 if self.k4param('PC')[3] == 'L' else 117"
+    evalmaximum: "0 if len(self.k4param('PC')) < 4 else 11.7 if self.k4param('PC')[3] == 'L' else 117"
     lengthpercent: 100
     cmd: TM1;PC;
     font: { family: DejaVu Sans Mono, size: 6, weight: normal }
     lefttext: ''
-    bottomtextvalue: "'' if len(self.k4param('PC')) < 4 else '0    2    4    6    8   10    ' if self.k4param('PC')[3] == 'L' else '0   20   40   60   80  100    '"
-    responsevalue: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[6:9])/10 if self.k4param('PC')[3] == 'L' else self.k4param('TM')[6:9]"
+    evalbottomtext: "'' if len(self.k4param('PC')) < 4 else '0    2    4    6    8   10    ' if self.k4param('PC')[3] == 'L' else '0   20   40   60   80  100    '"
+    evalresponse: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[6:9])/10 if self.k4param('PC')[3] == 'L' else self.k4param('TM')[6:9]"
   #}
 #end
 
@@ -196,7 +196,7 @@
     font: { family: DejaVu Sans Mono, size: 6, weight: normal }
     lefttext: ''
     bottomtext: "1  3  5  7"
-    responsevalue: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[0:3])"
+    evalresponse: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[0:3])"
   #}
 #end
 
@@ -211,7 +211,7 @@
     font: { family: DejaVu Sans Mono, size: 6, weight: normal }
     lefttext: ''
     bottomtext: "0 10 20 30"
-    responsevalue: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[3:6])"
+    evalresponse: "0 if len(self.k4param('TM')) < 4 else float(self.k4param('TM')[3:6])"
   #}
 #end
 
@@ -227,7 +227,7 @@
     font: { family: DejaVu Sans Mono, size: 6, weight: normal }
     lefttext: ' '
     bottomtext: "1:1       2:1       3:1    "
-    responsevalue: "0 if (len(self.k4param('TM')) < 4) or (self.k4param('TU') == None) or ((self.k4param('TQ') == '0') and (self.k4param('TU') == '0')) else float(self.k4param('TM')[9:12])/10"
+    evalresponse: "0 if (len(self.k4param('TM')) < 4) or (self.k4param('TU') == None) or ((self.k4param('TQ') == '0') and (self.k4param('TU') == '0')) else float(self.k4param('TM')[9:12])/10"
   #}
 #end
 
@@ -367,7 +367,7 @@
     lefttext: ' '
     bottomtext: "S1 2 3 4 5 6 7 8 9  +10 +20 +30 +40 +50 +60"
     response: SM$;
-    responsevalue: '0 if len(value) < 5 else value.rstrip(";")[3:]'
+    evalresponse: '0 if len(value) < 5 else value.rstrip(";")[3:]'
   #}
 #end
 
@@ -542,9 +542,9 @@
     from: 110.0
     to: 0.0
     length: 150
-    incrementvalue: '.0001 if value > 0.0 and value <= .01 else .1 if value <= 10.0 else 1.0'
-    cmdvalue: '"PC{:03d}L;".format(int(float(value)*10)) if float(value) <= 10.0 else "PC{:03d}H;".format(int(value))'
-    responsevalue: '0 if len(value) < 5 else float(value[2:5])/10 if value[5] == "L" else float(value[2:5])/10000 if value[5] == "X" else float(value[2:5])'
+    evalincrement: '.0001 if value > 0.0 and value <= .01 else .1 if value <= 10.0 else 1.0'
+    evalcmd: '"PC{:03d}L;".format(int(float(value)*10)) if float(value) <= 10.0 else "PC{:03d}H;".format(int(value))'
+    evalresponse: '0 if len(value) < 5 else float(value[2:5])/10 if value[5] == "L" else float(value[2:5])/10000 if value[5] == "X" else float(value[2:5])'
   #}
 #end
 
@@ -558,9 +558,9 @@
     from: 100
     to: 0
     length: 150
-    incrementvalue: '1'
-    cmdvalue: '"AG{:03d};".format(int(float(value)*0.6))'
-    responsevalue: 'float(value[2:5])/0.6'
+    evalincrement: '1'
+    evalcmd: '"AG{:03d};".format(int(float(value)*0.6))'
+    evalresponse: 'float(value[2:5])/0.6'
   #}
 #end
 
@@ -574,9 +574,9 @@
     from: 100
     to: 0
     length: 150
-    incrementvalue: '1'
-    cmdvalue: '"AG${:03d};".format(int(float(value)*0.6))'
-    responsevalue: 'float(value[3:6])/0.6'
+    evalincrement: '1'
+    evalcmd: '"AG${:03d};".format(int(float(value)*0.6))'
+    evalresponse: 'float(value[3:6])/0.6'
   #}
 #end
 
@@ -590,9 +590,9 @@
     from: 60
     to: 0
     length: 150
-    incrementvalue: '1'
-    cmdvalue: '"ML0{:03d};".format(int(float(value)))'
-    responsevalue: 'float(value[3:6])'
+    evalincrement: '1'
+    evalcmd: '"ML0{:03d};".format(int(float(value)))'
+    evalresponse: 'float(value[3:6])'
   #}
 #end
 
@@ -606,9 +606,9 @@
     from: 100
     to: 8
     length: 150
-    incrementvalue: '1'
-    cmdvalue: '"KS{:03d};".format(int(float(value)))'
-    responsevalue: 'float(value[2:5])'
+    evalincrement: '1'
+    evalcmd: '"KS{:03d};".format(int(float(value)))'
+    evalresponse: 'float(value[2:5])'
   #}
 #end
 
@@ -816,7 +816,7 @@
 #   increment: A python expression to set the slider increment given the variable value
 #   server: The server name of the server referenced by this slider
 #   cmdvalue: A python expression to produce the K4 command given the variable 'value'.
-#   responsevalue: A python expression to extract the slider value from the K4 response.
+#   evalresponse: A python expression to extract the slider value from the K4 response.
 #   font: The font used for the slider's text.
 #   fg: foreground color
 #   bg: background color
@@ -839,10 +839,12 @@
 #     horizontal: Specifies a horizontal bar graph
 #   cmd: Command(s) sent to initiate bar graph responses
 #   response: The base for requested responses for the bar graph (defaults to cmd)
-#   responsevalue: A python expression to extract the bar graph value from the K4 response.
+#   evalresponse: A python expression to extract the bar graph value from the K4 response.
 #   maximum: The maximum value the bar graph may be set to
+#   evalmaximum: A python expression to generate the maximum value
 #   length: The length of the bar graph in pixels
 #   font: the font used for the bar graph texts
 #   lefttext: Value of a text label placed to the left of the bar graph
-#   bottomtext:Value of a text label placed belos the bar graph
+#   bottomtext: Value of a text label placed below the bar graph
+#   evalbottomtext: A python expression to generate a text label placed below the bar graph
 #   lengthpercent: Length of bar graph as a percentage of the length of bottomtext
