--- a/example_config_files/nk8o_k4macro.yaml
+++ b/example_config_files/nk8o_k4macro.yaml
@@ -482,7 +482,6 @@
 
 #define tx_rx
 - item: togglebutton
-  wraparound: true
   selections:
     - { item: button, groupid: txrx,  indicator: 0, text: 'Receive',   cmd: RX;TQ;, bg: green, abg: green, response: TQ0; }
     - { item: button, groupid: txrx,  indicator: 0, text: 'Transmit',  cmd: TX;TQ;, bg: red,   abg: red,   response: TQ1; }
@@ -550,8 +549,7 @@
 
 # togglebutton options:
 #   wraparound: true or false. whether the button wraps back around to the first selection
-#   updown: true or false, if true, selections cycle up if the button is clicked in its upper half
-#       and selections cycle down if the button is clicked in its lower half
+#     defaults to true
 #   justify: 'left', 'right', 'center' to justify text within the Button
 #   selections: a list of selections, each of which may have the following elements
 #       text: button text
