Simplify K4 error code handling

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -23,7 +23,7 @@
   address: K4-SNxxxxx.local      # match your serial number in the string
   port: 9200
   startup: TS1;                   # Set test mode
-  connect_on_start: False
+  connect_on_start: True
 
 - item: page
   name: main
