Fix the range of the main and sub volume sliders
The K4 maintains volume in a range of 0-60. In a misguided attempt to go
from 0-100%, I scaled that to 0-100. Unfortunately, that does not map
well. We now show the actual volume range of 0 to 60 for the volume
sliders.

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -569,12 +569,12 @@
   contains: #{
   - item: slider
     orient: vertical
-    from: 100
+    from: 60
     to: 0
     length: 150
     evalincrement: '1'
-    evalcmd: '"AG{:03d};".format(int(float(value)*0.6))'
-    evalresponse: 'float(value[2:5])/0.6'
+    evalcmd: '"AG{:03d};".format(int(value))'
+    evalresponse: 'float(value[2:5])'
   #}
 #end
 
@@ -585,12 +585,12 @@
   contains: #{
   - item: slider
     orient: vertical
-    from: 100
+    from: 60
     to: 0
     length: 150
     evalincrement: '1'
-    evalcmd: '"AG${:03d};".format(int(float(value)*0.6))'
-    evalresponse: 'float(value[3:6])/0.6'
+    evalcmd: '"AG${:03d};".format(int(value))'
+    evalresponse: 'float(value[3:6])'
   #}
 #end
 
