config: fix power_dropdown widget

--- a/example_config_files/k4macro.yaml
+++ b/example_config_files/k4macro.yaml
@@ -534,7 +534,7 @@
   contains: #{
   - item: dropdownbutton
     width: 6
-    unexpectedresponse: 'str(float(value[2:5])/10 if value[5] == "L" else float(value[2:5])/10000 if value[5] == "X" else float(value[2:5])) + " W"'
+    unexpectedresponse: 'str("" if len(value) < 5 else float(value[2:5])/10 if value[5] == "L" else float(value[2:5])/10000 if value[5] == "X" else float(value[2:5])) + " W"'
     selections: #{
     - { text: "  5 W", cmd: PC050L; }
     - { text: " 10 W", cmd: PC100L; }
