nk8o_k4macro.yaml: Add power_dropdown widget

--- a/example_config_files/nk8o_k4macro.yaml
+++ b/example_config_files/nk8o_k4macro.yaml
@@ -39,6 +39,7 @@
       contains: #{
       #include tx_rx
       #include Test_mode
+      #include power_dropdown
       #}
 
     #include VFOs_group
